--- a/dashboard.html
+++ b/dashboard.html
@@ -62,13 +62,31 @@
                     </div>
                     <div class="vault-card">
                         <div class="vault-amount">0.1 ETH</div>
-                        <div class="vault-purpose">Trading Capital Savings</div>
+                        <div class="vault-purpose">Investment Savings</div>
                         <div class="vault-timer">29:16:40:10</div>
                         <button class="vault-view">View</button>
                     </div>
                     <div class="vault-card">
                         <div class="vault-amount">0.1 ETH</div>
-                        <div class="vault-purpose">Trading Capital Savings</div>
+                        <div class="vault-purpose">Web3 Savings</div>
+                        <div class="vault-timer">29:16:40:10</div>
+                        <button class="vault-view">View</button>
+                    </div>
+                    <div class="vault-card">
+                        <div class="vault-amount">0.1 ETH</div>
+                        <div class="vault-purpose">Weding Savings</div>
+                        <div class="vault-timer">29:16:40:10</div>
+                        <button class="vault-view">View</button>
+                    </div>
+                    <div class="vault-card">
+                        <div class="vault-amount">0.1 ETH</div>
+                        <div class="vault-purpose">Business Capital Savings</div>
+                        <div class="vault-timer">29:16:40:10</div>
+                        <button class="vault-view">View</button>
+                    </div>
+                    <div class="vault-card">
+                        <div class="vault-amount">0.1 ETH</div>
+                        <div class="vault-purpose">Medical Savings</div>
                         <div class="vault-timer">29:16:40:10</div>
                         <button class="vault-view">View</button>
                     </div>
