--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="style-D.css"/>
   <link rel="icon" href="./img/savelock-favicon.png"/>
   <title>Savelock: Crypto Savings App</title>
+  <script defer src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
 </head>
 <body>
   <div class="page-container">
