--- a/dashboard.html
+++ b/dashboard.html
@@ -23,13 +23,13 @@
 
         <!-- === Wallet Connect Section === -->
 
-      <walletConnect style="display: ;">
+      <div id="walletConnect"style="display: ;">
         <div class="wallet-connect-container">
             <h1 class="wallet-connect-title">Save in Web3</h1>
             <p class="wallet-connect-subtext">Start building your future one ETH at a time. Every deposit is a step toward your dream.</p>
             <button class="connect-wallet-btn">Connect Wallet</button>
         </div>
-        </walletConnect>
+      </div>
 
 
 
