--- a/dashboard.html
+++ b/dashboard.html
@@ -227,12 +227,12 @@
           <div class="form-group">
             <label for="lockupPeriod">Choose Lockup Period</label>
             <select id="lockupPeriod">
-              <option value="">Select lock period</option>
-              <option value="6">6 Hours</option>
-              <option value="30">30 Hours</option>
-              <option value="90">90 days</option>
-              <option value="180">180 days</option>
-              <option value="365">1 year</option>
+                <option value="">Select lock period</option>
+                <option value="21600">6 Hours</option>        <!-- 6 * 60 * 60 -->
+                <option value="2592000">30 Days</option>      <!-- 30 * 24 * 60 * 60 -->
+                <option value="7776000">90 Days</option>
+                <option value="15552000">180 Days</option>
+                <option value="31536000">1 Year</option>
             </select>
           </div>
           <div class="form-group">
