--- a/dashboard.html
+++ b/dashboard.html
@@ -202,7 +202,7 @@
     
 
       <!-- Savings Plan Form -->
-      <div id="savingsPlanForm" style="display: none;">
+      <div id="savings-form-wrapper" style="display: none;">
   <section class="savings-form">
     <div class="savings-header">
       <button class="back-btn" id="formBackBtn">← Back</button>
