--- a/dashboard.html
+++ b/dashboard.html
@@ -202,8 +202,8 @@
     
 
       <!-- Savings Plan Form -->
-      <div id="savings-form-wrapper" style="display: none;">
-  <section class="savings-form">
+      <div id="savingsPlanForm" style="display: none;">
+  <section class="savings-form-wrapper">
     <div class="savings-header">
       <button class="back-btn" id="formBackBtn">← Back</button>
       <h1 class="form-title">Fill out your savings details</h1>
