--- a/dashboard.html
+++ b/dashboard.html
@@ -272,6 +272,6 @@
     </footer>
     </div>
   <script src="dashboard.js"></script>
-  <script defer src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
