--- a/dashboard.html
+++ b/dashboard.html
@@ -211,14 +211,14 @@
 
     <form class="savings-form" id="planForm">
       <div class="form-group">
-        <label for="targetAmount">What is your total target amount?</label>
-        <input type="text" id="targetAmount" placeholder="Enter Amount e.g. 1 ETH"/>
+        <label for="targetAmount">Target Amount</label>
+        <input type="text" id="targetAmount" placeholder="e.g. 1 ETH"/>
       </div>
 
       <div class="form-group">
-        <label for="savingFrequency">How will you prefer to save?</label>
+        <label for="savingFrequency">Saving Frequency</label>
         <select id="savingFrequency">
-          <option value="">Select frequency</option>
+          <option value="">Select</option>
           <option value="daily">Daily</option>
           <option value="weekly">Weekly</option>
           <option value="monthly">Monthly</option>
@@ -226,9 +226,9 @@
       </div>
 
       <div class="form-group">
-        <label for="lockupPeriod">Choose Lockup Period</label>
+        <label for="lockupPeriod">Lockup Period</label>
         <select id="lockupPeriod">
-          <option value="">Select lock period</option>
+          <option value="">Select</option>
           <option value="21600">6 Hours</option>
           <option value="2592000">30 Days</option>
           <option value="7776000">90 Days</option>
@@ -238,8 +238,8 @@
       </div>
 
       <div class="form-group">
-        <label for="initialAmount">Enter your start amount</label>
-        <input type="text" id="initialAmount" placeholder="Enter Amount e.g. 0.1 ETH"/>
+        <label for="initialAmount">Start Amount</label>
+        <input type="text" id="initialAmount" placeholder="e.g. 0.1 ETH"/>
       </div>
 
       <div class="form-submit">
@@ -248,6 +248,7 @@
     </form>
   </section>
 </div>
+
 
 
 
