--- a/dashboard.html
+++ b/dashboard.html
@@ -203,7 +203,7 @@
 
       <!-- Savings Plan Form -->
       <div id="savingsPlanForm" style="display: none;">
-  <section class="savings-form-wrapper">
+      <div class="savings-form-wrapper">
     <div class="savings-header">
       <button class="back-btn" id="formBackBtn">← Back</button>
       <h1 class="form-title">Fill out your savings details</h1>
@@ -246,7 +246,7 @@
         <button type="submit" class="start-saving-btn" id="startSavingBtn">Start Saving</button>
       </div>
     </form>
-  </section>
+  </div>
 </div>
 
 
