--- a/dashboard.html
+++ b/dashboard.html
@@ -202,8 +202,8 @@
     
 
       <!-- Savings Plan Form -->
-      <div id="savingsPlanForm" style="display: none;">
-      <div class="savings-form-wrapper">
+      
+      <div class="savings-form-wrapper" div id="savingsPlanForm" style="display: none;">
     <div class="savings-header">
       <button class="back-btn" id="formBackBtn">← Back</button>
       <h1 class="form-title">Fill out your savings details</h1>
@@ -247,7 +247,7 @@
       </div>
     </form>
   </div>
-</div>
+
 
 
 
